# order-management-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_constraints_and_delete_policies.py
src/order_api/: main.py
src/order_api/api/: dependencies.py
src/order_api/api/v1/: audit_logs.py  auth.py  customers.py  orders.py  products.py  router.py  users.py
src/order_api/core/: config.py  database.py  error_handlers.py  exceptions.py  logging.py  security.py
src/order_api/middleware/: request_id.py
src/order_api/models/: __init__.py
src/order_api/repositories/: audit_repository.py  auth_repository.py  base.py  order_repository.py  resources.py
src/order_api/schemas/: __init__.py  pagination.py
src/order_api/services/: auth.py  orders.py  resources.py
tests/: conftest.py
tests/integration/: test_api.py  test_auth_and_crud.py  test_orders_extended.py
tests/unit/: test_database_contract.py  test_security_and_domain.py
