[project]
name = "order-management-api"
version = "1.0.0"
description = "Multi-tenant order management API"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "argon2-cffi>=23.1,<26",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<0.116",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "pyjwt>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/order_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP046"]
